# nano-zyrkel-helix

./: .gitignore  README.md
.github/workflows/: ci.yml  data-pipeline.yml  deploy-web.yml  update-core.yml
data/: gene_list.json
hats/: config.json  origin.json
scripts/: build_indices.sh  fetch_clinvar.sh  fetch_cosmic.sh  fetch_ensembl.sh  fetch_gnomad.sh  fetch_pharmgkb.sh  generate_quizzes.sh
web/: Cargo.toml  app.js  bam-viewer.js  evolution.css  evolution.html  evolution.js  i18n.js  index.html  karyotype.css  karyotype.html  karyotype.js  landpaths.js  mendel.css  mendel.html  mendel.js  mutations.css  mutations.html  mutations.js  quiz_cases.js  quiz_cases_en.js  quiz_expert.js  quiz_expert_en.js  sequencing.css  sequencing.html  sequencing.js  style.css  worldmap.js
web/data/: acmg_variants.json  clingen_dosage.json  coverage_profiles.json  cytobands.json  teaching_cases.json
web/data/regions/: artifact.json  galt_exon_del.json  ldlr_dup.json  pah_compound_het.json  pah_snv_het.json  pah_snv_hom.json
web/data/regions_longread/: ldlr_dup_ont.json
web/data/vcf_cases/: case_ad_fh.json  case_ar_mcadd.json  case_ar_pku.json  case_denovo.json
web/img/real_crops/: ATTRIBUTION.md
web/src/: app.rs  lib.rs  wasm.rs
web/src/components/: embed_wrapper.rs  mod.rs  nav.rs
web/src/data/: types.rs
web/src/gamification/: mod.rs
web/src/genetics/: acmg.rs  cnv.rs  codon.rs  hardy_weinberg.rs  mod.rs  mutation.rs  population.rs  reads.rs  variant_filter.rs
web/src/i18n/: mod.rs
web/src/modules/: epigenetics.rs  evolution.rs  hardy_weinberg.rs  karyotype.rs  meiosis.rs  mendel.rs  mod.rs  mutations.rs  pharmacogenetics.rs  population_map.rs  tumor.rs
