[package]
name = "helix"
version = "0.1.0"
edition = "2021"
authors = ["Christian Schlein"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen", "getrandom/js"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", optional = true }

# WASM-only
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
